--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- HERO -->
   <section class="container">
-    <div class="flex flex-column align-center center">
+    <div class="container flex flex-column align-center center">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
       <p>Throughout The Season</p>
@@ -111,7 +111,7 @@
     <!-- FULL BANNER -->
     <section>
       <div></div>
-      <div class="flex flex-column align-center">
+      <div class="flex flex-column center align-center">
         <h4>Trail Review</h4>
         <div>Asphalt</div>
         <div>National Park</div>
