--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
 
   <!-- NAVIGATION -->
-  <nav>
-    <div class="container flex space-between">
+  <nav class="header-nav">
+    <div class="container brand flex space-between">
       <!-- BRANDING -->
       <div class="flex align-center">
         <a href="#">
-          <img alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
+          <img class="logo" alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
         </a>
       </div>
       <!-- SEARCH -->
       <div class="flex flex-one align-center">
         <div>
           <form>
-            <input aria-label="Search" placeholder="What can we help you find?" type="search">
-            <button type="submit">SEARCH</button>
+            <input class="search-box" aria-label="Search" placeholder="What can we help you find?" type="search">
+            <button class="search-button" type="submit">SEARCH</button>
           </form>
-          <ul class="flex center space-between">
+          <ul class="nav-list flex center space-between">
             <li><a href="#">Clothing</a></li>
             <li><a href="#">Footwear</a></li>
             <li><a href="#">Equipment</a></li>
@@ -33,11 +33,11 @@
           </ul>
         </div>
         <!-- PROFILE -->
-        <div class="flex align-center">
-          <div class="flex flex-column">
+        <div class="flex align-center profile">
+          <div class="flex flex-column account">
             John Doe <a href="#">Log Out</a>
           </div>
-          <div><img alt="John Doe" src="img/profile-pic.jpg"></div>
+          <div class="profile-pic"><img alt="John Doe" src="img/profile-pic.jpg"></div>
         </div>
       </div>
     </div>
