--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="header-nav">
     <div class="container brand flex space-between">
       <!-- BRANDING -->
-      <div class="flex align-center">
+      <div class="brand flex align-center">
         <a href="#">
           <img class="logo" alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
         </a>
