--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- FULL BANNER -->
     <section class="full-banner">
       <div class="full-banner-image"></div>
-      <div class="ful-banner-sidebar flex flex-column center align-center">
+      <div class="full-banner-sidebar flex flex-column center align-center">
         <h4>Trail Review</h4>
         <div>Asphalt</div>
         <div>National Park</div>
