--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </ul>
       </div>
       <div>
-        <div class="link-heaer text-primary">Company Info</div>
+        <div class="link-header text-primary">Company Info</div>
         <ul>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Careers</a></li>
