updated module style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- NAVIGATION -->
   <nav class="header-nav">
-    <div class="container brand flex space-between">
+    <div class="container flex space-between">
       <!-- BRANDING -->
       <div class="brand flex align-center">
         <a href="#">
@@ -37,14 +37,16 @@
           <div class="flex flex-column account">
             John Doe <a href="#">Log Out</a>
           </div>
-          <div class="profile-pic"><img alt="John Doe" src="img/profile-pic.jpg"></div>
+          <div class="profile-pic">
+            <img alt="John Doe" src="img/profile-pic.jpg">
+          </div>
         </div>
       </div>
     </div>
   </nav>
 
     <!-- HERO -->
-  <section class="container hero">
+  <section class="hero">
     <div class="container flex flex-column align-center center">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
@@ -175,7 +177,7 @@
     <!-- PS DEMO -->
     <section class="ps">
       <div class="flex flex-column align-center">
-        <img src="img/pluralsight-white.png" />
+        <img src="img/pluralsight-white.png" alt="Pluralsight" />
         <div class="demo">This site is created for demonstrative purposes only and does not offer any real products or services.</div>
       </div>
     </section>
